<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

   
     <TextView 
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/alias"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"        
        android:text="TDH"
        
        />
    <TextView 
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="ThanhPhuong"
        
        />
    
    <TextView 
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="btphuong2345@yahoo.com"
        
        />
    
   

    <Button
        android:id="@+id/add_to_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="50dp"
        android:text="@string/add_to_list"
        android:textStyle="bold"
        />    

</LinearLayout>